# 14-peas-in-a-pod

./: .gitignore  1024-16.cali  1024-8.cali  16384-16.cali  2048-4.cali  CMakeCache.txt  CMakeLists.txt  Makefile  Project_weak_scaling-Cuda.ipynb  README.md  Report.md  SampleSort_thicket_2.ipynb  Strong_scaling_individual.ipynb  Strong_scaling_individual_MPI.ipynb  Weak_scaling_individual-MPI.ipynb  bitonic  bitonic.cu  bubble_sort  bubble_sort.cpp  bubble_sort.grace_job  bubble_sort.h  bubble_sort_v1.cpp  build.sh  cmake_install.cmake  cuda.cu  cuda_individual_speedup.ipynb  data_creation  data_creation.cpp  data_creation.grace_job  data_creation_cuda.cpp  data_creation_cuda.cu  data_creationg_cuda.grace_job  lab3-analysis.ipynb  mergesort.cpp  mpi.c  output.9162830  output.9165878  project_thicket.ipynb  quicksort.cpp  sample  (+15 more)
.ipynb_checkpoints/: CUDA-WeakScaling-checkpoint.ipynb  MPI-WeakScaling-checkpoint.ipynb  Project_weak_scaling-Cuda-checkpoint.ipynb  Project_weak_scaling_individual-Copy1-checkpoint.ipynb  SampleSort_thicket_2-checkpoint.ipynb  Weak_scaling_individual-checkpoint.ipynb  cuda_sample-Copy1-checkpoint.ipynb  (+4 more)
bitonic sort/: CMakeLists.txt  bitonic.grace_job  build.sh  t2-v1024.cali
merge sort/: CMakeLists.txt  mergesort.cpp  mergesort.cu  mergesort.grace_job
merge sort/cali and jupyter/: cuda_merge_strong_scaling.ipynb  cuda_merge_weak_scaling.ipynb
merge sort/merge sort cuda/: CMakeLists.txt  build.sh  mergesort.cu  mergesort.grace_job  scratch.cu
merge sort/merge sort mpi/: 128-8.cali  mergesort.cpp  mergesort.grace_job
(+1183 files in other folders)
